--- a/css/styles.css
+++ b/css/styles.css
@@ -89,19 +89,17 @@ a {
 #mob-action:hover,
 #mob-action2:hover
  {
-	text-decoration: underline;
-	text-decoration-thickness: 1.5px;
-   
- 
+	 opacity:100%
 }
 
 #action,
 #mob-action,
 #mob-action2 {
 	text-decoration: underline;
-	text-decoration-thickness: 1px;
+	text-decoration-thickness: 1.3px;
 	text-underline-offset: 7px;
 	color: blue;
+	opacity:84%;
 }
 
 .social-url-wrapper {
@@ -200,12 +198,13 @@ i:hover {
     animation:blinking 1s linear infinite;
     opacity:0 
 }
+
 @keyframes blinking{
     0%,49.9%{
         opacity:0 
    }
     50%,to{
-        opacity:1 
+        opacity:0.8 
    }
 }
 
