--- a/css/techStack.css
+++ b/css/techStack.css
@@ -18,7 +18,7 @@
     background: white;
     border-radius: 1rem;
     margin-left: 1rem;
-    border: 0.05rem solid black;
+    border: 0.05rem solid rgb(0, 0, 0,0.17);
     display: flex;
     justify-content: center;
     align-items: center;
